feat: Add AgentMail API client

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
 # Clawederous Environment Configuration
 # Copy this file to .env and fill in your values
 
-# Email (IMAP)
-IMAP_HOST=imap.agentmail.to
-IMAP_PORT=993
-IMAP_USER=your-email@agentmail.to
-IMAP_PASS=your-app-password
+# AgentMail (recommended - no IMAP needed!)
+AGENTMAIL_API_KEY=your_api_key_here
+AGENTMAIL_INBOX=tawkie@agentmail.to
 
-# OpenClaw Agent
-OPENCLAW_URL=http://localhost:3000
-AGENT_KEY=your-agent-key
+# Email (IMAP) - optional, AgentMail is preferred
+IMAP_HOST=
+IMAP_PORT=
+IMAP_USER=
+IMAP_PASS=
 
 # Twitter (optional)
 TWITTER_API_KEY=
