--- a/package.json
+++ b/package.json
@@ -5,24 +5,34 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc",
-    "dev": "ts-node src/index.ts",
+    "build": "tsc && npm run build:frontend",
+    "build:frontend": "vite build",
+    "dev": "ts-node src/index.ts & vite",
+    "dev:frontend": "vite",
     "convex:dev": "npx convex dev",
     "convex:deploy": "npx convex deploy"
   },
   "dependencies": {
     "agentmail": "^0.2.12",
     "convex": "^1.11.0",
+    "lucide-react": "^0.563.0",
     "mailparser": "^3.6.0",
     "nodemailer": "^6.9.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.0",
     "zod": "^3.22.0"
   },
   "devDependencies": {
     "@types/mailparser": "^3.4.0",
     "@types/node": "^20.0.0",
     "@types/nodemailer": "^6.4.0",
-    "ts-node": "^10.9.0",
-    "typescript": "^5.0.0"
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "typescript": "^5.3.0",
+    "vite": "^5.0.0",
+    "ts-node": "^10.9.0"
   },
   "clawhub": {
     "name": "Clawderous",
